--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
         <script src="app.js" type="module"></script>
     </body>
 </html>
